force-app/main/default/objects/Mosaic_Account_360_mock__dlm/Mosaic_Account_360_mock__dlm.object-meta.xml
<CustomObject>
    <label>Mosaic_Account_360_mock</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Mosaic_Account_360_mock</labelOverride>
        <masterLabel>Mosaic_Account_360_mock</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>