force-app/main/default/objects/Mosaic_Account_360_mock__dlm/fields/Email_Opens_12M__c.field-meta.xml
<CustomField>
    <fullName>Email_Opens_12M__c</fullName>
    <label>Email_Opens_12M</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Email_Opens_12M</labelOverride>
        <masterLabel>Email_Opens_12M</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>