force-app/main/default/objects/Mosaic_Account_360_mock__dlm/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <label>Last_Order_Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Last_Order_Date</labelOverride>
        <masterLabel>Last_Order_Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>